# weather

./: .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
app/: __init__.py  models.py  routes.py  services.py  weather_service.py
migrations/versions/: 3c3d1cb7bb00_your_message_here.py
